base upload AWS images
