# nest-api/src/routes/file/file.module.ts
@@ -5,11 +5,13 @@ import { JsonService } from './json/json.service';
 import { CsvController } from './csv/csv.controller';
 import { CsvService } from './csv/csv.service';
 import { DirController } from './dir/dir.controller';
+import { ImageController } from './image/image.controller';
 import { DirService } from './dir/dir.service';
+import { ImageService } from './image/image.service';
 
 @Module({
   imports: [DataBaseModule],
-  controllers: [JsonController, CsvController, DirController],
-  providers: [JsonService, CsvService, DirService],
+  controllers: [JsonController, CsvController, DirController, ImageController],
+  providers: [JsonService, CsvService, DirService, ImageService],
 })
-export class FileModule {}
+export class FileModule { }
